- AI:
	- Adjustments to terrain avoidance defaults and how the threat range is calculated for better default terrain avoidance.
	- Add a slider for setting the angular size of the rear blind cone, in which the craft will simply pitch up to turn to a target in that direction.
- UI:
	- Add a case-insensitive filter to the vessel selection windows in Vessel Mover and Custom Spawn Templates.
- Mod Integration:
	- Add support for the MouseAimFlight mod.
		- Disables the prevention of firing weapons when the mouse is over windows when the Mouse Aim mode is active.
- Competition:
	- Add an option to generate a CSV file for the overall PVP scores in the PVP parser.

v1.5.9.2
IMPROVEMENTS / FIXES
- AI:
	- Fix incorrect terrain avoidance critical angle conversion (degrees vs radians).
	- Add a slider for setting the control surface deployment time used for terrain avoidance and reduce the amount the control surface deployment time affects the terrain detection distance.
		- Note: the default is now lower than it was before and lowering it further can significantly reduce the terrain avoidance distance for highly manoeuverable craft.

v1.5.9.1
IMPROVEMENTS / FIXES
- General:
	- Adjust how PartsBlacklist.cfg is read/written to merge the defaults with any existing custom values.
	- Fix known exceptions and NaNs.
- Weapons:
	- Use the combination of DEBUG_LINES and DEBUG_WEAPONS for showing the targeting component debug lines instead of only having them in the debug build.
	- Further tweaks to the aim assist targeting reticle to account for the floating origin.
	- Missiles/Bombs now arm their warheads when they reach a safe distance from their launching craft, to prevent anti-missile systems fragging craft by detonating ordinance immediately after launch.
- UI:
	- Add a toolbar button for the BDA Vessel Mover.
	- Make window states persistent across scene changes.
- Competition:
	- Remove drag from seated Kerbals in the Waypoint race gamemode.