@@ -236,6 +236,9 @@ namespace BDArmory.WeaponMounts
                     Quaternion.Euler(-targetPitchAngle, 0, 0), pitchSpeed);
         }
 
+        public float Pitch => -pitchTransform.localEulerAngles.x.ToAngle();
+        public float Yaw => yawTransform.localEulerAngles.y.ToAngle();
+
         public bool ReturnTurret()
         {
             if (!yawTransform)
@@ -309,6 +312,8 @@ namespace BDArmory.WeaponMounts
             }
             minPitchRange.minValue = minPitchLimit;
             minPitchRange.maxValue = 0;
+            if (minPitchLimit != 0)
+                minPitchRange.stepIncrement = Mathf.Pow(10, Mathf.Min(1f, Mathf.Floor(Mathf.Log10(Mathf.Abs(minPitchLimit)) + (1 - Mathf.Log10(20f) - 1e-4f)))) / 10f; // Use between 20 and 200 divisions
 
             UI_FloatRange maxPitchRange = (UI_FloatRange)Fields["maxPitch"].uiControlEditor;
             if (maxPitchLimit > 90)
@@ -321,6 +326,8 @@ namespace BDArmory.WeaponMounts
             }
             maxPitchRange.maxValue = maxPitchLimit;
             maxPitchRange.minValue = 0;
+            if (maxPitchLimit != 0)
+                maxPitchRange.stepIncrement = Mathf.Pow(10, Mathf.Min(1f, Mathf.Floor(Mathf.Log10(Mathf.Abs(maxPitchLimit)) + (1 - Mathf.Log10(20f) - 1e-4f)))) / 10f; // Use between 20 and 200 divisions
 
             UI_FloatRange yawRangeEd = (UI_FloatRange)Fields["yawRange"].uiControlEditor;
             if (yawRangeLimit > 360)
@@ -344,6 +351,8 @@ namespace BDArmory.WeaponMounts
                 yawRangeEd.minValue = 0;
                 yawRangeEd.maxValue = yawRangeLimit;
             }
+            if (yawRange != 0)
+                yawRangeEd.stepIncrement = Mathf.Pow(10, Math.Min(1f, Mathf.Floor(Mathf.Log10(Mathf.Abs(yawRange)) + (1 - Mathf.Log10(20f) - 1e-4f)))) / 10f; // Use between 20 and 200 divisions
         }
     }
     public class BDAScaleByDistance : PartModule
